[backport] Turn TestReferenceCAS into a standalone/no-testng test